--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section class="hero">
         <div class="container">
 
-            <div class="content">
+            <div class="hero__content">
                 <div class="heading">
                     <div class="catch-phrase">
-                        <h1>Where Tradition meets <strong>Excellence</strong></h1>
+                        <h1>Where <br> Tradition <br>meets <br><strong>Excellence</strong></h1>
                     </div>
                     <h5 class="brand">
                         Lionheart Karate Association Philippines, Inc.
@@ -37,10 +37,10 @@
                         Japan.
                     </p>
                     <div class="call-to-action">
-                        <a href="/enroll.html" class="enroll">Start Free Trial
-                            <ion-icon name="arrow-forward-outline"></ion-icon></a>
-                        <a href="/about">Learn More
-                            <ion-icon name="arrow-forward-outline"></ion-icon></a>
+                        <a href="/enroll.html" class="enroll btn btn-accent">Start Free Trial
+                            <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="/about" class="btn">Learn More
+                            <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -48,10 +48,29 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__img">
+                <div class="wrapper">
+                    <img src="./assets/media/about-img1.jpg" alt="">
+                    <img src="./assets/media/about-img2.jpg" alt="">
+                </div>
+            </div>
+            <div class="about__content">
+                <h2>ABOUT US</h2>
+                <p>
+                    Lionheart Karate Association Philippines Inc., known as Lionheart Karatedo Club, is a leading martial arts federation in the Philippines. Founded in 1996 by Shihan Rodolfo Salinas and led by Chairman Sensei Alrey Joseph Mesias, the club is dedicated to promoting and teaching traditional Japanese Karate. With over two decades of experience, Lionheart Karatedo Club offers a refined system of instruction for trainees of all ages, enhancing physical fitness, self-defense skills, discipline, and character development.
+                    <br><br>
+                    We uphold the values of respect, integrity, and perseverance, providing a supportive environment where students can thrive. Our comprehensive training programs, guided by experienced instructors, empower individuals to master the art of Karate and embody its virtues.
+                </p>
+                <a href="/about" class="btn" fx-shadow-direction="left">Learn More About Us <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="./js/jquery.connections.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://kit.fontawesome.com/0f8d602c12.js" crossorigin="anonymous"></script>
     <!-- <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
