--- a/index.html
+++ b/index.html
@@ -14,59 +14,125 @@
 </head>
 
 <body>
-    <section class="hero">
-        <div class="container">
-
-            <div class="hero__content">
-                <div class="heading">
-                    <div class="catch-phrase">
-                        <h1>Where <br> Tradition <br>meets <br><strong>Excellence</strong></h1>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__content">
+                    <div class="heading">
+                        <div class="catch-phrase">
+                            <h1>Where <br> Tradition <br>meets <br><strong>Excellence</strong></h1>
+                        </div>
+                        <h5 class="brand">
+                            Lionheart Karate Association Philippines, Inc.
+                        </h5>
                     </div>
-                    <h5 class="brand">
-                        Lionheart Karate Association Philippines, Inc.
-                    </h5>
+                    <div class="details">
+                        <p class="description">
+                            Lionheart Karate Association Philippines, Inc.
+                            stands as one of the most Technically Proficient Traditional Karate
+                            Organization in the Philippines. Over our
+                            27 years of dedicated service, we
+                            have achieved remarkable feats and gained invaluable
+                            knowledege from esteemed masters in
+                            Japan.
+                        </p>
+                        <div class="call-to-action">
+                            <a href="/enroll.html" class="enroll btn btn-accent">Start Free Trial
+                                <i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="/about" class="btn">Learn More
+                                <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="details">
-                    <p class="description">
-                        Lionheart Karate Association Philippines, Inc.
-                        stands as one of the most Technically Proficient Traditional Karate
-                        Organization in the Philippines. Over our
-                        27 years of dedicated service, we
-                        have achieved remarkable feats and gained invaluable
-                        knowledege from esteemed masters in
-                        Japan.
+                <div class="hero__img"></div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="about__img">
+                </div>
+                <div class="about__content">
+                    <h2>ABOUT US</h2>
+                    <p>
+                        Lionheart Karate Association Philippines Inc., known as Lionheart Karatedo Club, is a leading martial arts federation in the Philippines. Founded in 1996 by Shihan Rodolfo Salinas and led by Chairman Sensei Alrey Joseph Mesias, the club is dedicated to promoting and teaching traditional Japanese Karate. With over two decades of experience, Lionheart Karatedo Club offers a refined system of instruction for trainees of all ages, enhancing physical fitness, self-defense skills, discipline, and character development.
+                        <br><br>
+                        We uphold the values of respect, integrity, and perseverance, providing a supportive environment where students can thrive. Our comprehensive training programs, guided by experienced instructors, empower individuals to master the art of Karate and embody its virtues.
                     </p>
-                    <div class="call-to-action">
-                        <a href="/enroll.html" class="enroll btn btn-accent">Start Free Trial
-                            <i class="fa-solid fa-arrow-right"></i></a>
-                        <a href="/about" class="btn">Learn More
-                            <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="/about" class="btn" fx-shadow-direction="left">Learn More About Us <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </section>
+
+        <section class="timeline">
+            <div class="container">
+                <div class="timeline__content">
+                    <div class="wrapper">
+                        <h2>OUR TIMELINE</h2>
+                        <p>Lionheart is very active in participating in various Competitions and Seminars inside the country and out.<br>See our latest events here in our Timeline. </p>
+                        <a href="/timeline" class="btn">See More of Our Timeline<i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="timeline__timeline">
+                    <div class="event">
+                        <div class="details">
+                            <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
+                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
+                        </div>
+                        <div class="line">
+                            <span>Jul. 2, 2024</span>
+                        </div>
+                        <div class="banner"></div>
+                    </div>
+                    <div class="event">
+                        <div class="details">
+                            <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
+                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
+                        </div>
+                        <div class="line">
+                            <span>Jul. 2, 2024</span>
+                        </div>
+                        <div class="banner"></div>
+                    </div>
+                    <div class="event">
+                        <div class="details">
+                            <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
+                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
+                        </div>
+                        <div class="line">
+                            <span>Jul. 2, 2024</span>
+                        </div>
+                        <div class="banner"></div>
+                    </div>
+                    <div class="event">
+                        <div class="details">
+                            <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
+                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
+                        </div>
+                        <div class="line">
+                            <span>Jul. 2, 2024</span>
+                        </div>
+                        <div class="banner"></div>
                     </div>
                 </div>
             </div>
-            <div class="hero__img"></div>
-        </div>
-    </section>
+        </section>
 
-    <section class="about">
-        <div class="container">
-            <div class="about__img">
-                <div class="wrapper">
-                    <img src="./assets/media/about-img1.jpg" alt="">
-                    <img src="./assets/media/about-img2.jpg" alt="">
+        <section class="instructors">
+            <div class="container">
+                <div class="instructors__content">
+                    <div class="wrapper">
+                        <h2>OUR INSTRUCTORS</h2>
+                        <p>In our 27 years of service, Lionheart has produced some of the finest Instructors of our generation.</p>
+                    </div>
+                </div>
+
+                <div class="instructors__cards">
+
                 </div>
             </div>
-            <div class="about__content">
-                <h2>ABOUT US</h2>
-                <p>
-                    Lionheart Karate Association Philippines Inc., known as Lionheart Karatedo Club, is a leading martial arts federation in the Philippines. Founded in 1996 by Shihan Rodolfo Salinas and led by Chairman Sensei Alrey Joseph Mesias, the club is dedicated to promoting and teaching traditional Japanese Karate. With over two decades of experience, Lionheart Karatedo Club offers a refined system of instruction for trainees of all ages, enhancing physical fitness, self-defense skills, discipline, and character development.
-                    <br><br>
-                    We uphold the values of respect, integrity, and perseverance, providing a supportive environment where students can thrive. Our comprehensive training programs, guided by experienced instructors, empower individuals to master the art of Karate and embody its virtues.
-                </p>
-                <a href="/about" class="btn" fx-shadow-direction="left">Learn More About Us <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="./js/jquery.connections.js"></script>
