Add Instructors Section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,115 @@
                 </div>
 
                 <div class="instructors__cards">
+                    <div class="card">
+                        <div class="wrapper">
+                            <div class="banner" style="background-image: url(./assets/media/instructors/placeholder.jpg);">
+                            </div>
+                            <div class="details">
+                                <div class="name">
+                                    <h6>Sensei <strong>John Doe</strong></h6>
+                                    <p>HONBU ASSISTANT INSTUCTOR</p>
+                                </div>
 
+                                <div class="description">
+                                    <p class="clamp">
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                    </p>
+                                    <a href="">Read More...</a>
+                                </div>
+
+                                <div class="links">
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                                    <a href=""><i class="fa-solid fa-envelope"></i></a>
+                                    <a href=""><i class="fa-solid fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="card">
+                        <div class="wrapper">
+                            <div class="banner card__chief" style="background-image: url(./assets/media/instructors/alrey-bg.png);">
+                                <img src="./assets/media/instructors/alrey.png" alt="">
+                            </div>
+                            <div class="details">
+                                <div class="name">
+                                    <h6>Sensei <strong>Alrey Joseph Mesias</strong></h6>
+                                    <p>CHIEF INSTUCTOR</p>
+                                </div>
+
+                                <div class="description">
+                                    <p class="clamp">
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                    </p>
+                                    <a href="">Read More...</a>
+                                </div>
+
+                                <div class="links">
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                                    <a href=""><i class="fa-solid fa-envelope"></i></a>
+                                    <a href=""><i class="fa-solid fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="card">
+                        <div class="wrapper">
+                            <div class="banner" style="background-image: url(./assets/media/instructors/placeholder.jpg);">
+                            </div>
+                            <div class="details">
+                                <div class="name">
+                                    <h6>Sensei <strong>Joe Dohn</strong></h6>
+                                    <p>CALAMBA BRANCH INSTRUCTOR</p>
+                                </div>
+
+                                <div class="description">
+                                    <p class="clamp">
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                        Eum iusto fugiat officia voluptatibus harum molestiae eos quia amet. Sequi est dolorem dolores. Impedit et molestiae aut dolore. Et officia quos aut.
+                                    </p>
+                                    <a href="">Read More...</a>
+                                </div>
+
+                                <div class="links">
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                                    <a href=""><i class="fa-solid fa-envelope"></i></a>
+                                    <a href=""><i class="fa-solid fa-phone"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="credentials">
+            <div class="container">
+                <div class="credentials__content">
+                    <h2>CREDENTIALS</h2>
+                    <p>
+                        Lionheart Karate Association Philippines, Inc. is proud to be a SEC-registered organization, ensuring our legitimacy and commitment to upholding the highest standards of karate instruction and organizational integrity. Our SEC registration reflects our dedication to transparency, accountability, and professional governance, providing peace of mind to our members and their families.
+                        <br><br>
+                        We are honored to serve as the official Philippine representative of the Asai Shotokan Association International (ASAI), a prestigious and traditional Japanese Shotokan Karate organization. As the ASAI representative in the Philippines, we are committed to preserving and promoting the rich heritage and disciplined practice of Shotokan Karate, adhering to the rigorous standards and principles established by ASAI.
+                    </p>
+                    <a href="" class="btn">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+                <!-- <div class="credentials__asai">
+                    <div class="asai__brand">
+                        <img src="./assets/media/logos/logo__asai.png" alt="">
+                        <h5>Asai Shotokan<br>Association International</h5>
+                    </div>
+                    <div class="asai__content">
+                        <p>Asai karate is based on Funakoshi/Nakayama Shotokan karate with the added techniques by Master Tetsuhiko Asai. Asai karate is unique as it combined a long-distance fighting method of Shotokan with a short distance fighting method of White Crane Kung fu.</p>
+                    </div>
+                </div> -->
             </div>
         </section>
     </main>
@@ -137,9 +244,7 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="./js/jquery.connections.js"></script>
     <script src="https://kit.fontawesome.com/0f8d602c12.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
+    <script src="./js/lib/clamp.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
