--- a/index.html
+++ b/index.html
@@ -77,42 +77,90 @@
                     <div class="event">
                         <div class="details">
                             <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
-                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
                         </div>
                         <div class="line">
                             <span>Jul. 2, 2024</span>
                         </div>
-                        <div class="banner"></div>
+                        <div class="banner">
+                            <div class="description">
+                                <p class="clamp">
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                </p>
+                                <a href="">Read More...</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="event">
                         <div class="details">
                             <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
-                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
                         </div>
                         <div class="line">
                             <span>Jul. 2, 2024</span>
                         </div>
-                        <div class="banner"></div>
+                        <div class="banner">
+                            <div class="description">
+                                <p class="clamp">
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                </p>
+                                <a href="">Read More...</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="event">
                         <div class="details">
                             <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
-                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
                         </div>
                         <div class="line">
                             <span>Jul. 2, 2024</span>
                         </div>
-                        <div class="banner"></div>
+                        <div class="banner">
+                            <div class="description">
+                                <p class="clamp">
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                </p>
+                                <a href="">Read More...</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="event">
                         <div class="details">
                             <h6>Lionheart brings home the bacon at the 2024 Taiwan Formosa Cup</h6>
-                            <p>Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.</p>
                         </div>
                         <div class="line">
                             <span>Jul. 2, 2024</span>
                         </div>
-                        <div class="banner"></div>
+                        <div class="banner">
+                            <div class="description">
+                                <p class="clamp">
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                    Ut eos odit pariatur ut. Molestiae quis id fugit laborum. At numquam praesentium ut sunt.
+                                </p>
+                                <a href="">Read More...</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -217,26 +265,47 @@
             </div>
         </section>
 
-        <section class="credentials">
+        <section class="contact">
             <div class="container">
-                <div class="credentials__content">
-                    <h2>CREDENTIALS</h2>
-                    <p>
-                        Lionheart Karate Association Philippines, Inc. is proud to be a SEC-registered organization, ensuring our legitimacy and commitment to upholding the highest standards of karate instruction and organizational integrity. Our SEC registration reflects our dedication to transparency, accountability, and professional governance, providing peace of mind to our members and their families.
-                        <br><br>
-                        We are honored to serve as the official Philippine representative of the Asai Shotokan Association International (ASAI), a prestigious and traditional Japanese Shotokan Karate organization. As the ASAI representative in the Philippines, we are committed to preserving and promoting the rich heritage and disciplined practice of Shotokan Karate, adhering to the rigorous standards and principles established by ASAI.
-                    </p>
-                    <a href="" class="btn">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                <div class="contact__form">
+                    <div class="form__content">
+                        <h2>CONTACT US</h2>
+                        <p>Interested in joining or enrolling your kids? Contact us here.</p>
+                    </div>
+
+                    <div class="form__details">
+                        <div class="contact__links">
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href=""><i class="fa-brands fa-youtube"></i></a>
+                            <a href=""><i class="fa-solid fa-envelope"></i></a>
+                            <a href=""><i class="fa-solid fa-phone"></i></a>
+                        </div>
+                        <form action="">
+                            <div>
+                                <label for="email">Email Address</label>
+                                <input type="email" id="email" name="email" placeholder="Your Email">
+                            </div>
+                            <div>
+                                <label for="message">Your Message</label>
+                                <textarea rows="5" type="text" id="message" name="message" placeholder="Leave us a Message here..."></textarea>
+                                <div class="checkbox">
+                                    <input type="checkbox" name="newsletter" id="newsletter" checked>
+                                    <label for="newsletter">Would you like to recieve weekly newsletter from LKAP, Inc. for events and updates?</label>
+
+                                </div>
+                            </div>
+
+                            <button class="submit btn" type="submit">
+                                <span>Send</span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
-                <!-- <div class="credentials__asai">
-                    <div class="asai__brand">
-                        <img src="./assets/media/logos/logo__asai.png" alt="">
-                        <h5>Asai Shotokan<br>Association International</h5>
-                    </div>
-                    <div class="asai__content">
-                        <p>Asai karate is based on Funakoshi/Nakayama Shotokan karate with the added techniques by Master Tetsuhiko Asai. Asai karate is unique as it combined a long-distance fighting method of Shotokan with a short distance fighting method of White Crane Kung fu.</p>
-                    </div>
-                </div> -->
+
+                <div class="contact__map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d689.9052294839337!2d121.12297671745326!3d14.303536939973155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d955c343af81%3A0x2f40a770528aeb8c!2sPhase%208%20Multipurpose%20Hall!5e0!3m2!1sen!2sph!4v1721641371033!5m2!1sen!2sph" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
             </div>
         </section>
     </main>
