--- a/test.html
+++ b/test.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-
-    <svg width="100" height="100" viewBox="0 0 24 24">
-        <path
-            d="M21,9H15V22H13V16H11V22H9V9H3V7H21M12,2A2,2 0 0,1 14,4A2,2 0 0,1 12,6C10.89,6 10,5.1 10,4C10,2.89 10.89,2 12,2Z" />
-    </svg>
+    <div class="container">
+        <h1 class="solid">ABOUT US</h1>
+        <h1>ABOUT US</h1>
+    </div>
 
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/anims.js"></script>
 </body>
 
 </html>
