Added Branches to Contact Map

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
           </div>
           <div class="instructors__content">
             <div class="instructors__imgs">
-              <img src="assets/media/instructors/instructors_1.jpg" alt="" />
+              <img src="assets/media/instructors/instructors_1.jpg" alt="" class="fx__fadeIn"/>
             </div>
-            <div class="instructors__details">
+            <div class="instructors__details fx__group-fadeIn">
               <div class="headings">
                 <h3>Alrey Joseph Mesias</h3>
                 <h5>LKAP Chairman and Chief Instructor</h5>
@@ -356,9 +356,20 @@
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
+            <!-- <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1HflXd4elIsrKcRc99xYuQHcmTIGWSaw&ehbc=2E312F&noprof=1" width="640" height="480"></iframe> -->
+            <div class="branches">
+              <button onclick="switchBranch(0)">Office</button>
+              <button onclick="switchBranch(1)"class="active">Main</button>
+              <button onclick="switchBranch(2)">Tagapo</button>
+              <button onclick="switchBranch(3)">Calamba</button>
+            </div>
           </div>
         </div>
       </section>
+
+      <footer>
+
+      </footer>
     </main>
 
     <!-- SCROLL-MAGIC -->
